package logarlec.view.observerviews;
import javax.swing.*;
import java.awt.*;


public abstract class View extends JPanel {
    public abstract void updateView();
}
